<resources>
    <string name="app_name">Exceed Jobs</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="phone">Phone</string>
    <string name="create_new_account">Create New Account</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_verification">Please enter your verification code here</string>
    <string name="create_your_login">Create Your Login</string>
    <string name="submit">Submit</string>
    <string name="already_registered_user">Already Registered User?</string>
    <string name="e_mail">E-mail (optional)</string>
    <string name="name">Name</string>
    <string name="address">Address (optional)</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sharedpreferences_ID">com.app.exceedjobs</string>
    <string name="become_paid">Become a paid member</string>
    <string name="payment_reminder">Become a pro</string>
</resources>